# qag-agent-demo

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  agent-v2.py  agent.py  env.yaml  pyproject.toml  requirements-agent.txt  requirements-cohort-copilot.txt  requirements-dev.txt  requirements-mcp.txt  requirements.txt  server-v2.py  server.py
agent/: agent.py  langgraph.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
gdc-mcp/: server.py
qag-mcp/: server-w-cohort-copilot.py
qag-mcp/cohort-copilot/: cohort_copilot.py  schema.py
qag_mcp/: _defines.py  _utils.py  server.py
qag_mcp/cohort_copilot/: __init__.py  cohort_copilot.py  config.yaml  schema.py
src/: agent.py  server-w-cohort-copilot.py  server.py
src/cohort-copilot/: cohort_copilot.py
src/static/: index.html
