[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "qag_mcp"
authors = [
  { name="Steven Song", email="songs1@uchicago.edu" },
]
description = "Query Augmented Generation MCP"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version", "dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Steven/qag-agent-demo"
Issues = "https://github.com/Steven/qag-agent-demo/issues"

[tool.hatch.version]
path = "qag_mcp/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements-mcp.txt"]
